last and final commit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
   <main class="container">
     <div class="img__container">
-      
+      <picture>
+        <source media="(min-width:600px)" srcset="images/drawers.jpg">
+        <img src="images/drawers.jpg" alt="Flowers" >
+      </picture>
     </div>
     <div class="text__container">
       <div class="text-description">
@@ -27,9 +30,9 @@
       </div>
       <div class="share-panel">
         <span>SHARE</span>
-        <i class="fa-brands fa-2x fa-square-facebook"></i>
-        <i class="fa-brands fa-2x fa-square-twitter"></i>
-        <i class="fa-brands fa-2x fa-square-pinterest"></i>
+        <a href="#"><i class="fa-brands fa-2x fa-square-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-2x fa-square-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-2x fa-square-pinterest"></i></a>
         <span class="share-arrow"></span>
       </div>
       <div class="socials__container">
@@ -39,7 +42,7 @@
           <p class="personal-details--date">28 Jun 2020</p>
         </div>
         <div class="socials__container--share">
-          <i class="fa-solid  fa-share"></i>
+          <a href="#"><i class="fa-solid  fa-share"></i></a>
         </div>
       </div>
       
